Convert users of String.format()
Use String.formatted() instead.

Change-Id: I1598f1f64cdf2b9b7ed710337469945b4dace798
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>